# manga_dl

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCURLPP.cmake
lib/: task_manager.hpp
sites/: mangapark.mdlx
src/: constants.h  http.h  main.cpp  mangapark.h  printers.h  util.h
src/mdlx/: mdlx_command.h  mdlx_parse.h  mdlx_types.h
src/python/: mod_mangapark.py  mod_mangapark.spec
src/webdriver/: webdriver.cpp  webdriver.h
